RESOLVED FIXED267674
[iOS] Returning to fullscreen to PiP on YouTube breaks subsequent touch input
https://bugs.webkit.org/show_bug.cgi?id=267674
Summary [iOS] Returning to fullscreen to PiP on YouTube breaks subsequent touch input
Jer Noble
Reported 2024-01-17 22:35:11 PST
[iOS] Returning to fullscreen to PiP on YouTube breaks subsequent touch input
Attachments
Jer Noble
Comment 1 2024-01-17 22:35:16 PST
Jer Noble
Comment 2 2024-01-17 22:39:50 PST
EWS
Comment 3 2024-01-18 08:51:27 PST
Committed 273180@main (5556d4cf108f): <https://commits.webkit.org/273180@main> Reviewed commits have been landed. Closing PR #22897 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.